docs/_site/results/run1/hpctoolkit/logs/hpctoolkit-2020.03.01-libdwarf-experiment.err
==> Warning: libdwarf-20130729-5dvcxo27hpeamtuzdzqlkgdwde63l2ew failed to install
==> Error: libdwarf-20130729-5dvcxo27hpeamtuzdzqlkgdwde63l2ew: Package was not installed
==> Error: ProcessError: Command exited with status 2:
    'make' 'ARFLAGS=rcs'

3 errors found in build log:
     113    config.status: creating config.h
     114    config.status: config.h is unchanged
     115    ==> [2022-02-25-09:47:34.678972] FILTER FILE: Makefile [replacing "
            ^dwfzlib\s*=\s*-lz"]
     116    ==> [2022-02-25-09:47:34.680891] 'make' 'ARFLAGS=rcs'
     117    /p/vast1/build/spack/lib/spack/env/gcc/g++  -g -O2 -I. -I. -I./../l
            ibdwarf -DCONFPREFIX=/p/vast1/build/spack/opt/spack/linux-rhel7-bro
            adwell/gcc-10.2.1/libdwarf-20130207-r3pw3tcv4xzp7ctucxddvecvrzikiul
            y/lib    -c -o print_die.o print_die.cc
     118    print_die.cc: In function 'bool print_attribute(Dwarf_Debug, Dwarf_
            Die, Dwarf_Half, Dwarf_Attribute, bool, int, DieVec&, SrcfilesHolde
            r&)':
  >> 119    print_die.cc:2134:58: error: no match for 'operator<<' (operand typ
            es are 'std::basic_ostream<char>' and 'std::ostream' {aka 'std::bas
            ic_ostream<char>'})
     120     2133 |                                 cout << "Low = " <<
     121          |                                 ~~~~~~~~~~~~~~~~~~~
     122          |                                                  |
     123          |                                                  basic_ostr
            eam<[...]>
     124     2134 |                                     IToHex0N(lowAddr,10) <<
     125          |                                     ~~~~~~~~~~~~~~~~~~~~ ^~

     ...

     388    /usr/tce/packages/gcc/gcc-10.2.1/rh/usr/include/c++/10/ostream:773:
            5: note: candidate: 'template<class _Ostream, class _Tp> typename s
            td::enable_if<std::__and_<std::__not_<std::is_lvalue_reference<_Tp>
             >, std::__is_convertible_to_basic_ostream<_Ostream>, std::__is_ins
            ertable<typename std::__is_convertible_to_basic_ostream<_Tp>::__ost
            ream_type, const _Tp&, void> >::value, typename std::__is_convertib
            le_to_basic_ostream<_Tp>::__ostream_type>::type std::operator<<(_Os
            tream&&, const _Tp&)'
     389      773 |     operator<<(_Ostream&& __os, const _Tp& __x)
     390          |     ^~~~~~~~
     391    /usr/tce/packages/gcc/gcc-10.2.1/rh/usr/include/c++/10/ostream:773:
            5: note:   template argument deduction/substitution failed:
     392    /usr/tce/packages/gcc/gcc-10.2.1/rh/usr/include/c++/10/ostream: In 
            substitution of 'template<class _Ostream, class _Tp> typename std::
            enable_if<std::__and_<std::__not_<std::is_lvalue_reference<_Tp> >, 
            std::__is_convertible_to_basic_ostream<_Ostream>, std::__is_inserta
            ble<typename std::__is_convertible_to_basic_ostream<_Tp>::__ostream
            _type, const _Tp&, void> >::value, typename std::__is_convertible_t
            o_basic_ostream<_Tp>::__ostream_type>::type std::operator<<(_Ostrea
            m&&, const _Tp&) [with _Ostream = std::basic_ostream<char>&; _Tp = 
            std::basic_ostream<char>]':
     393    print_die.cc:2135:33:   required from here
  >> 394    /usr/tce/packages/gcc/gcc-10.2.1/rh/usr/include/c++/10/ostream:773:
            5: error: no type named 'type' in 'struct std::enable_if<false, std
            ::basic_ostream<char>&>'
     395    In file included from globals.h:95,
     396                     from print_die.cc:44:
     397    /usr/tce/packages/gcc/gcc-10.2.1/rh/usr/include/c++/10/iomanip:79:5
            : note: candidate: 'template<class _CharT, class _Traits> std::basi
            c_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_Cha
            rT, _Traits>&, std::_Resetiosflags)'
     398       79 |     operator<<(basic_ostream<_CharT, _Traits>& __os, _Reset
            iosflags __f)
     399          |     ^~~~~~~~
     400    /usr/tce/packages/gcc/gcc-10.2.1/rh/usr/include/c++/10/iomanip:79:5
            : note:   template argument deduction/substitution failed:

     ...

     461      363 |     operator<<(basic_ostream<_CharT, _Traits>& __os, _Put_t
            ime<_CharT> __f)
     462          |     ^~~~~~~~
     463    /usr/tce/packages/gcc/gcc-10.2.1/rh/usr/include/c++/10/iomanip:363:
            5: note:   template argument deduction/substitution failed:
     464    print_die.cc:2135:33: note:   'std::basic_ostream<char>' is not der
            ived from 'std::_Put_time<_CharT>'
     465     2135 |                                 cout << "High = " <<
     466          |                                 ^~~~
  >> 467    make: *** [print_die.o] Error 1

See build log for details:
  /var/tmp/sochat1/spack-stage/spack-stage-libdwarf-20130207-r3pw3tcv4xzp7ctucxddvecvrzikiuly/spack-build-out.txt

==> Error: FileNotFoundError: [Errno 2] No such file or directory: 'libdwarf/libdwarf.h.in'

/p/vast1/build/spack/var/spack/repos/builtin/packages/libdwarf/package.py:43, in patch:
         42    def patch(self):
  >>     43        filter_file(r'^typedef struct Elf Elf;$', '', 'libdwarf/libdwarf.h.in')


Making predictions for symbolator
Making predictions for libabigail
Making predictions for actual
/var/spool/slurmd/job100393/slurm_script: line 12: 18007 Killed                  spliced splice --package hpctoolkit@2020.03.01 --splice libdwarf --runner spack --replace libdwarf --experiment experiment --outfile /p/vast1/build/spliced-experiment/results/hpctoolkit/2020.03.01/libdwarf/experiment.json
==> Warning: libdwarf-20130729-5dvcxo27hpeamtuzdzqlkgdwde63l2ew failed to install
==> Warning: AssertionError exception when releasing read lock for libdwarf-20130729-5dvcxo27hpeamtuzdzqlkgdwde63l2ew: 
==> Error: libdwarf-20130729-5dvcxo27hpeamtuzdzqlkgdwde63l2ew: Package was not installed
==> Warning: libdwarf-20130207-r3pw3tcv4xzp7ctucxddvecvrzikiuly failed to install
==> Warning: AssertionError exception when releasing read lock for libdwarf-20130207-r3pw3tcv4xzp7ctucxddvecvrzikiuly: 
==> Error: libdwarf-20130207-r3pw3tcv4xzp7ctucxddvecvrzikiuly: Package was not installed
==> Error: FileNotFoundError: [Errno 2] No such file or directory: 'libdwarf/libdwarf.h.in'

/p/vast1/build/spack/var/spack/repos/builtin/packages/libdwarf/package.py:43, in patch:
         42    def patch(self):
  >>     43        filter_file(r'^typedef struct Elf Elf;$', '', 'libdwarf/libdwarf.h.in')


Making predictions for spack-test
Making predictions for symbolator
Making predictions for libabigail
abicompat not found on path, will look for spack instead.
Making predictions for actual
